# padaria-bancodados

./: .gitignore  Procfile  README.md  db.sqlite3  dump.json  pyproject.toml  requirements.txt
core/: settings.py  urls.py
perfis/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
perfis/migrations/: 0001_initial.py  0002_usuario_foto_perfil_usuario_nome_completo.py  0003_remove_usuario_foto_perfil_and_more.py
produtos/: admin.py  models.py  serializers.py  urls.py  views.py
produtos/migrations/: 0001_initial.py  0002_produto_imagem_produto_preco.py  0003_produto_avaliacao_produto_ingredientes_base_and_more.py
