[project]
name = "padaria-bancodados"
version = "3.14"
description = "Default template for PDM package"
authors = [
    {name = "mayara",email = "mayara.soliveiraifc@gmail.com"},
]
dependencies = ["django>=6.0.6", "dj-database-url>=3.1.2", "psycopg2-binary>=2.9.12", "gunicorn>=26.0.0", "django-cors-headers>=4.9.0", "djangorestframework>=3.17.1", "djangorestframework-simplejwt>=5.5.1", "Pillow>=12.2.0"]
requires-python = ">=3.14"
readme = "README.md"
license = {text = "mit"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
